# pi-detector-bench

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  models.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-a-dataset.md  add-a-detector.md  methodology-proposal.md
.github/workflows/: ci.yml
notebooks/: benchmark_colab.ipynb
pidbench/: benchmark_suite.py  data.py  dedup.py  indirect_data.py  metrics.py  models.py  multiturn_data.py  runners.py  scores_io.py
results/: FINDINGS.md  det_points.json  det_points_indirect.json  false_positives.json  false_positives.md  indirect.json  indirect.md  leaderboard.json  leaderboard.md  multiturn.json  multiturn.md  multiturn_dedup.json  operating_points.json  operating_points.md  operating_points_indirect.json  operating_points_indirect.md
results/scores/: bastion_prompt_protection_70m__jailbreakbench.json  bastion_prompt_protection_70m__lmsys.json  bastion_prompt_protection_70m__rogue_security_prompt_injections_benchmark.json  bastion_prompt_protection_70m__s_labs_test.json  bastion_prompt_protection_70m__wildchat.json  bastion_prompt_protection_70m__xtram1_test.json  deepset_injection_184m__jailbreakbench.json  deepset_injection_184m__lmsys.json  deepset_injection_184m__s_labs_test.json  (+63 more)
scripts/: analyze_multiturn.py  analyze_operating_points.py  dedup_multiturn.py  eval_indirect.py  eval_multiturn.py  measure_false_positives.py  plot_multiturn.py  plot_operating_points.py  rebuild_results_from_scores.py  run_leaderboard.py
(+144 files in other folders)
