[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-detector-bench"
version = "0.1.0"
description = "An open, model-agnostic benchmark for prompt-injection detectors — measured on both axes (attack catch-rate and false positives on real traffic), threshold-agnostic, reproducible from raw scores."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Bastion Soft" }]
keywords = [
    "prompt-injection",
    "prompt-injection-detection",
    "llm-security",
    "ai-security",
    "guardrails",
    "benchmark",
    "evaluation",
    "leaderboard",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "transformers>=4.40",
    "tokenizers>=0.15",
    "huggingface-hub>=0.20",
    "datasets>=2.18",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/bastion-soft/pi-detector-bench"
Repository = "https://github.com/bastion-soft/pi-detector-bench"

[tool.setuptools]
packages = ["pidbench", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
